--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,8 @@ jobs:
     - run: npm test
       working-directory: my-app
       
-    - name: Deploy 
+    - name: Deploy
+      working-directory: my-app
       run: | 
         git config --global user.name $user_name 
         git config --global user.email $user_email
